Network status icon and WLAN reset

--- a/fancontrol.cfg
+++ b/fancontrol.cfg
@@ -17,6 +17,9 @@ dcf77 = 40
 [measure]
 interval = 10
 
+[check_network]
+interval = 10
+
 [webserver]
 page = /root/www/index.html
 temppage = /root/www/index_.html
